<resources>
    <string name="app_name">Cars Gallery</string>
    <string name="gallery">Gallery</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="tap_anywhere_to_continue">Tap anywhere to continue</string>
    <string name="scrollview">Scroll View</string>
    <string name="slideview">Slide View</string>
    <string name="call_me">Call me</string>
    <string name="mail_me">Mail me</string>
    <string name="my_instagram">My Instagram</string>


</resources>