<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_gallery">

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="perets.app.thecargalleryv2.ui.gallery.GalleryFragment"
        android:label="@string/gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_to_sharePhotosFragment"
            app:destination="@id/sharePhotosFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_about"
        android:name="perets.app.thecargalleryv2.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_contact"
        android:name="perets.app.thecargalleryv2.ui.contact.ContactFragment"
        android:label="@string/contact"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/sharePhotosFragment"
        android:name="perets.app.thecargalleryv2.ui.SharePhotosGallery.SharePhotosFragment"
        android:label="Cars Photos"
        tools:layout="@layout/share_photos_fragment">
        <action
            android:id="@+id/action_sharePhotosFragment_to_navigation_gallery"
            app:destination="@id/navigation_gallery" />
    </fragment>
</navigation>